--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,3 @@
-
 /*
   --------------
     Variables 
@@ -9,17 +8,13 @@
   --navbar-height: 7.5vh;
   --color-blue-primary: #028090;
   --color-green-primary: #1A5E63;
-  --shadow: 3px 5px 5px rgba(3, 32, 51, .8);
+  --shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  --shadow-reverse: 4px 0px 4px rgba(0, 0, 0, 0.25);
+  --main-card-height: 50vh;
+  --main-card-width: 35vh;
   --project-item-width: 70vh;
   --project-item-height: 40vh;
 }
-
-/*
------------------
-  End Variables 
------------------
-*/
-
 
 /*
   -----------
@@ -30,19 +25,20 @@
 @font-face {
   font-family: 'Baloo Bhai 2';
   src: url(../fonts/BalooBhai2-Regular.ttf);
-  font-weight: 400;
+  font-weight: 300;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: #fff;
-    text-decoration: none;
-    list-style: none;
-    font-family: 'Baloo Bhai 2';
-    scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #fff;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Baloo Bhai 2';
+  scroll-behavior: smooth;
 }
+
 
 /*
   --------------
@@ -52,8 +48,8 @@
 
 
 body {
-    background-color: #333;
-    width: 100vw;
+  background-color: #333;
+  width: 100%;
 }
 
 
@@ -64,15 +60,15 @@ body {
 */
 
 .navbar {
-    position: fixed;
-    background-color: var(--color-blue-primary);
-    height: var(--navbar-height);
-    width: 100vw;
-    z-index: 100;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
+  position: fixed;
+  background-color: var(--color-blue-primary);
+  height: var(--navbar-height);
+  width: 100vw;
+  z-index: 100;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 h1 {
@@ -80,10 +76,10 @@ h1 {
 }
 
 .navbar__ul {
-    padding: 20px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar__menu {
@@ -91,16 +87,9 @@ h1 {
 }
 
 .navbar__link {
-    font-size: 1.2rem;
-    margin: 0 1.5rem;
+  font-size: 1.2rem;
+  margin: 0 1.5rem;
 }
-
-/*
-  --------------
-    End NavBar 
-  --------------
-*/
-
 
 /*
   --------
@@ -109,120 +98,220 @@ h1 {
 */
 
 main {
-    padding-top: 8vh;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;color: #fff;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+  padding-top: 8vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  color: #fff;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 h2 {
-    font-size: 3rem;
-    background-color: var(--color-blue-primary);
-    width: 100vw;
-    text-align: center;
-    margin: 6vh 0;
+  font-size: 3rem;
+  background-color: var(--color-blue-primary);
+  width: 100vw;
+  text-align: center;
+  margin: 6vh 0;
 }
 
 .main__section {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .main__about {
-    background-color: var(--color-green-primary);
-    padding: 2%;
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    flex-direction: row-reverse;
-    font-size: 30px;
+  background-color: var(--color-green-primary);
+  padding: 2%;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: row-reverse;
+  font-size: 30px;
+}
+
+
+.main__about::before {
+  content: '';
+  position: absolute;
+  width: 25rem;
+  height: 25rem;
+  left: 0;
+  transform: translateY(-2.4rem);
+  border-bottom-right-radius: 100%;
+  border-right: 3rem solid var(--color-blue-primary);
+  border-bottom: 3rem solid var(--color-blue-primary);
+  box-shadow: var(--shadow);
+}
+
+.main__about::after {
+  content: '';
+  position: absolute;
+  width: 20rem;
+  height: 20rem;
+  left: 0;
+  transform: translateY(29rem);
+  border-top-right-radius: 100%;
+  border-top: 3rem solid var(--color-blue-primary);
+  border-right: 3rem solid var(--color-blue-primary);
+  box-shadow: var(--shadow-reverse);
 }
 
 .main__description {
-    width: 95%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  z-index: 5;
 }
 
 .main__description h3 {
-    margin-top: 5%;
-    padding-right: 43%;
+  margin-top: 5%;
+  padding-right: 43%;
 }
 
 .main__description p {
-    font-size: 2rem;
-    padding-left: 20%;
-    padding-right: 20%;
-    margin-bottom: 25%;
+  font-size: 2rem;
+  padding-left: 20%;
+  padding-right: 20%;
+  margin-bottom: 25%;
 }
 
 .main__img {
-    background-color: var(--color-blue-primary);
-    width: 40%;
-    height: 57.5vh;
-    border-radius: 100%;
-    margin-top: 5%;
-    box-shadow: var(--shadow);;
+  background-color: var(--color-blue-primary);
+  width: 70vh;
+  height: 52vh;
+  border-radius: 100%;
+  margin-top: 5%;
+  margin-right: 5rem;
+  box-shadow: var(--shadow);
+  ;
 }
 
-.main__about img {
-    height: 86%;
-    width: 86%;
-    border-radius: 100%;
-    object-fit: cover;
-    margin: 7%;
+.main__img img {
+  height: 86%;
+  width: 86%;
+  border-radius: 100%;
+  object-fit: cover;
+  margin: 7%;
+  z-index: 10;
 }
 
 .main__card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--color-green-primary);
-    min-width: 17.5%;
-    height: 50vh;
-    margin: 2%;
-    border-radius: 2.5%;
-    box-shadow: var(--shadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-green-primary);
+  width: var(--main-card-width);
+  height: var(--main-card-height);
+  margin: 1.5rem;
+  border-radius: 2.5%;
+  box-shadow: var(--shadow);
 }
 
+
 .main__card h3 {
-    font-size: 2rem;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+.main__card h3::before {
+  content: '';
+  position: absolute;
+  width: 5rem;
+  height: 5rem;
+  transform: translate(-7.6rem, -4.9rem);
+  border-bottom-right-radius: 100%;
+  border-right: 1rem solid var(--color-blue-primary);
+  border-bottom: 1rem solid var(--color-blue-primary);
+  box-shadow: var(--shadow-reverse);
+}
+
+.main__card h3::after {
+  content: '';
+  position: absolute;
+  width: 7rem;
+  height: 7rem;
+  transform: translate(-6.1rem,16.35rem);
+  border-top-right-radius: 100%;
+  border-top: 2rem solid var(--color-blue-primary);
+  border-right: 2rem solid var(--color-blue-primary);
+  box-shadow: var(--shadow-reverse);
 }
 
 .main__card img {
-    margin-top: 2.5rem;
-    max-width: 60%;
+  margin-top: 2.5rem;
+  max-width: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  z-index: 5;
+}
+
+.main__card div {
+  height: 2rem;
+}
+
+.main__card div::before {
+  content: '';
+  position: absolute;
+  object-fit: cover;
+  width: 100px;
+  height: 200px;
+  transform: translate(4.3rem,-10rem);
+  border-radius: 150px 0 0 150px;
+  background-color: var(--color-blue-primary);
+  box-shadow: var(--shadow);
+}
+
+.main__card div::after {
+  content: '';
+  position: absolute;
+  width: 7rem;
+  height: 7rem;
+  transform: translate(2.1rem,-23.35rem);
+  border-bottom-left-radius: 100%;
+  border-left: 1.5rem solid var(--color-blue-primary);
+  border-bottom: 1.5rem solid var(--color-blue-primary);
+  box-shadow: var(--shadow);
 }
 
 
 #projects {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10%;
+}
+
+#projects div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .main__project_type {
-    background-color: var(--color-green-primary);
-    width: 20%;
-    height: 7.5vh;
-    padding: .9% 0;
-    margin: 4%;
-    font-size: 1.5rem;
-    text-align: center;
-    border-radius: 1rem;
+  background-color: var(--color-green-primary);
+  width: 40vh;
+  height: 7.5vh;
+  padding: 17px 0;
+  margin: 4%;
+  font-size: 1.5rem;
+  text-align: center;
+  border-radius: 1rem;
 }
 
 .main__project_item {
@@ -233,19 +322,19 @@ h2 {
   border-radius: 1.5rem;
   width: var(--project-item-width);
   height: var(--project-item-height);
-  margin: 1.5%;
+  margin: 1rem;
   cursor: pointer;
   box-shadow: var(--shadow);
 }
 
 
 .main__project_item img {
-    object-fit: cover;
-    position: absolute;
-    width: var(--project-item-width);
-    height: var(--project-item-height);
-    border-radius: 1.5rem;
-    opacity: .5;
+  object-fit: cover;
+  position: absolute;
+  width: var(--project-item-width);
+  height: var(--project-item-height);
+  border-radius: 1.5rem;
+  opacity: .5;
 }
 
 .main__project_item h4 {
@@ -272,25 +361,19 @@ h2 {
 }
 
 /*
-  ------------
-    End Main 
-  ------------
-*/
-
-/*
   ----------
     Footer 
   ----------
 */
 
 footer {
-    background-color: var(--color-blue-primary);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    height: 60vh;
+  background-color: var(--color-blue-primary);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  height: 60vh;
 }
 
 .main__social_icon {
@@ -304,6 +387,7 @@ footer {
 .main__social_icon img {
   width: 40%;
 }
+
 .main__social_icon a {
   display: flex;
   flex-direction: column;
@@ -315,99 +399,14 @@ footer {
 }
 
 /*
-  --------------
-    End Footer 
-  --------------
-*/
-
-/*
   ----------
     Mobile
   ----------
 */
-@media screen and (max-width: 600px) {
 
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: fixed;
-      flex-wrap: wrap;
-      height: var(--navbar-height);
-    }
+@media screen and (max-width:1000px) {
 
-    h1 {
-      font-size: 1.2rem;
-      margin-left: 5%;
-    }
-
-    .navbar__menu {
-      display:inline;
-      background: none;
-      outline: none;
-      border: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-right: 2rem;
-    }
-
-    .navbar__menu span {
-      text-align: center;
-      height: 100%;
-      width: 100%;
-      font-size: 3rem;
-    }
-
-    .navbar__ul {
-      display: none;
-      width: 100%;
-      height: 100vh;
-      flex-direction: column;
-      background-color: var(--color-blue-primary);
-      justify-content: space-evenly;
-      align-items: center;
-    }
-    
-    .navbar__ul--active {
-      display: flex;
-    }
-
-
-    h2 {
-        font-size: 1.5rem;
-    }
-
-    .main__card {
-        min-width: 40%;
-        height: 30vh;
-    }
-
-    .main__card h3 {
-        font-size: 1.2rem;
-    }
-
-    .main__card img {
-        height: 45%;
-    }
-
+  .main__about::after {
+    left: 0;
+  }
 }
-
-/*
-  --------------
-    End Mobile
-  --------------
-*/
-
-
-@media screen and (max-width:1000px){
-
-}
-
-
-
-
-
-
-
-
