feature - card flip, menu

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -82,12 +82,20 @@ h1 {
   align-items: center;
 }
 
+
 .navbar__menu {
   display: none;
 }
 
+.navbar__menu_close {
+  background: none;
+  outline: none;
+  border: none;
+  display: none;
+}
+
 .navbar__link {
-  font-size: 1.2rem;
+  font-size: 120%;
   margin: 0 1.5rem;
 }
 
@@ -189,7 +197,7 @@ h2 {
   height: 52vh;
   border-radius: 100%;
   margin-top: 5%;
-  margin-right: 5rem;
+  right: 5rem;
   box-shadow: var(--shadow);
   ;
 }
@@ -241,7 +249,7 @@ h2 {
   position: absolute;
   width: 7rem;
   height: 7rem;
-  transform: translate(-6.1rem,16.35rem);
+  transform: translate(-6.1rem, 16.35rem);
   border-top-right-radius: 100%;
   border-top: 2rem solid var(--color-blue-primary);
   border-right: 2rem solid var(--color-blue-primary);
@@ -267,7 +275,7 @@ h2 {
   object-fit: cover;
   width: 100px;
   height: 200px;
-  transform: translate(4.3rem,-10rem);
+  transform: translate(4.3rem, -10rem);
   border-radius: 150px 0 0 150px;
   background-color: var(--color-blue-primary);
   box-shadow: var(--shadow);
@@ -278,7 +286,7 @@ h2 {
   position: absolute;
   width: 7rem;
   height: 7rem;
-  transform: translate(2.1rem,-23.35rem);
+  transform: translate(2.1rem, -23.35rem);
   border-bottom-left-radius: 100%;
   border-left: 1.5rem solid var(--color-blue-primary);
   border-bottom: 1.5rem solid var(--color-blue-primary);
@@ -316,16 +324,50 @@ h2 {
 
 .main__project_item {
   display: flex;
-  flex-direction: column-reverse;
   align-items: center;
   justify-content: center;
+  margin: 1rem;
   border-radius: 1.5rem;
   width: var(--project-item-width);
   height: var(--project-item-height);
-  margin: 1rem;
   cursor: pointer;
   box-shadow: var(--shadow);
+  transform-style: preserve-3d;
+  transition: 300ms ease-in-out;
 }
+
+.main__project_item:hover {
+  background-color: rgba(0, 0, 0, 0.45);
+}
+
+.project__card {
+  width: var(--project-item-width);
+  height: var(--project-item-height);
+  position: relative;
+}
+
+.main__project_item.rotated {
+  transform: rotateY(180deg);
+  transition: 300ms ease-in-out;
+}
+
+.project__face {
+  width: var(--project-item-width);
+  height: var(--project-item-height);
+  margin: 2rem;
+  position: absolute;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  overflow: hidden;
+  box-shadow: var(--shadow);
+  border-radius: 1.5rem;
+}
+
+.project__card--back {
+  background-color: var(--color-blue-primary);
+  transform: rotateY(-180deg);
+}
+
 
 
 .main__project_item img {
@@ -340,13 +382,11 @@ h2 {
 .main__project_item h4 {
   background-color: var(--color-green-primary);
   width: var(--project-item-width);
-  margin-top: calc(90% - var(--project-item-height));
+  border-radius: 8px;
   height: 4vh;
   padding-top: .2%;
   text-align: center;
   font-size: 1.25rem;
-  z-index: 1;
-
 }
 
 .main__project_item span {
@@ -382,6 +422,8 @@ footer {
   justify-content: center;
   align-items: center;
   margin-bottom: 5%;
+  width: 20%;
+  height: 20%;
 }
 
 .main__social_icon img {
@@ -400,13 +442,89 @@ footer {
 
 /*
   ----------
-    Mobile
+    Tablet
   ----------
 */
 
-@media screen and (max-width:1000px) {
+@media screen and (min-width:500px) and (max-width:1600px) {
+
+  :root {
+    --navbar-height: 7.5vh;
+    --color-blue-primary: #028090;
+    --color-green-primary: #1A5E63;
+    --shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    --shadow-reverse: 4px 0px 4px rgba(0, 0, 0, 0.25);
+    --main-card-height: 50vh;
+    --main-card-width: 35vh;
+    --project-item-width: 70vh;
+    --project-item-height: 40vh;
+  }
+
+  .navbar {
+    justify-content: space-around;
+    width: 100%;
+  }
+
+  .navbar h1 {
+    display: none;
+  }
+
+  .navbar__ul {
+    justify-content: space-around;
+    width: 100%;
+  }
+
+  .navbar__link {
+    font-size: 75%;
+  }
+
+  .main__about::before {
+    width: 15rem;
+    height: 15rem;
+    top: 16.75rem;
+  }
 
   .main__about::after {
-    left: 0;
+    width: 17rem;
+    height: 17rem;
+    margin-top: 1%;
   }
+
+  .main__img {
+    position: absolute;
+    width: 15rem;
+    height: 15rem;
+    margin-left: 3rem;
+  }
+
+  .main__description {
+    width: 80%;
+    height: 50%;
+  }
+
+  .main__description h3 {
+    font-size: 2rem;
+
+  }
+
+  .main__description p {
+    font-size: 1.5rem;
+  }
+
+  .main__section h2 {
+    width: 100%;
+    font-size: 2rem;
+  }
+
+  .main__card {
+    width: 15rem;
+    height: 23rem;
+  }
+
+
+
+
+  
+
+
 }
