--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
 
     :root {
         --main-card-height: 28vh;
@@ -33,25 +33,43 @@
         margin-right: 2rem;
     }
 
-    .navbar__menu span {
+    .navbar__menu i {
         text-align: center;
         height: 100%;
         width: 100%;
         font-size: 3rem;
     }
 
+    .navbar__menu_close {
+        display: block;
+        position: absolute;
+        right: .5rem;
+        top: .5rem;
+        width: 4rem;
+        height: 4rem;
+    }
+    .navbar__menu_close i {
+        width: 100%;
+        height: 100%;
+        font-size: 3rem;
+    }
+
     .navbar__ul {
-        display: none;
+        top: -100vh;
+        position: fixed;
+        display: flex;
         width: 100%;
         height: 100vh;
         flex-direction: column;
         background-color: var(--color-blue-primary);
         justify-content: space-evenly;
         align-items: center;
+        transition: .5s;
     }
 
     .navbar__ul--active {
-        display: flex;
+        top: 0;
+        transition: .5s;
     }
 
 
