--- a/public/css/main.css
+++ b/public/css/main.css
@@ -456,7 +456,7 @@ footer {
 }
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 500px){
 
   :root {
       --main-card-height: 28vh;
@@ -711,7 +711,7 @@ footer {
 }
 
 
-@media screen and (min-width:500px) and (max-width:1600px) {
+@media screen and (min-width:500px) and (max-width:1600px) and (max-height: 800) {
 
   :root {
     --navbar-height: 7.5vh;
